noname second edition

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 	
 
-<div id='item3'><canvas id="canvas1"></canvas></div>
+<div id='item3'><canvas id="canvas1" hidden ></canvas></div>
 <div id='item5_buffer' hidden ><canvas id="buffer_canvas1"></canvas></div>
 </div>
 </div>
