triton and salamandra from  30 10 2018  14 32

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 <script src="js/mod_color_picker.js"></script>
 <script src="js/mod_pixel_editor.js"></script>
 <script src="js/mod_snake_pro.js"></script>
+<script src="js/mod_salamandra.js"></script>
+<script src="js/mod_triton.js"></script>
 <script src="js/mod_obhod_one_color.js"></script>
 <script src="js/mod_modal_window.js"></script>
 <script src="js/mod_colors.js"></script>
