--- a/html/_index.html
+++ b/html/_index.html
@@ -1,41 +1,6 @@
 ﻿
-<div id='controls' style='display:none;'>
-<div class='btn'><canvas id='max'></canvas></div>
-<div class='btn'><canvas id='min'></canvas></div>
-<div class='btn'><canvas id='save'></canvas></div>
-<div class='btn'><canvas id='more'></canvas></div>
-<div class='btn'><canvas id='less'></canvas></div>
-<div class='btn'><canvas id='left'></canvas></div>
-<div class='btn'><canvas id='start'></canvas></div>
-<div class='btn'><canvas id='up'></canvas></div>
-<div class='btn'><canvas id='down'></canvas></div>
-<div class='btn'><canvas id='right'></canvas></div>
-
-
-<div class='btn' hidden><canvas id='remove'></canvas></div>
-
-<!----
-<div class='btn'><canvas id='p1'></canvas></div>
-<div class='btn'><canvas id='p2'></canvas></div>
-<div class='btn'><canvas id='p3'></canvas></div>
----->
-</div>
-<div id='moves' ></div>
-<div style='display:none'>
-<input type="radio" class="qwe" name="mode" id="take" value="take"> Take 
-<input type="radio"  class="qwe"  name="mode" id="snake" value="snake" checked> Take Off  
-<input type="radio"  class="qwe"  name="mode" id="join" value="join" > Fill 
-<input type="radio"  class="qwe"  name="mode" id="split" value="split" > Return 
-</div>
-
-<div style='display:none'>Cell size: <select id="cell_size" hidden><option value="1" selected >1</option><option value="2" >2</option><option value="3" >3</option><option value="4" >4</option><option value="5" >5</option><option value="8" >8</option><option value="16" >16</option><option value="24">24</option></select>
-<input type="button" value="set" onclick="update()">
-<input type="checkbox" id='save_on' checked>
-<!--<input type="button" value="save" onclick="save()">-->
-
-</div>
-<div id='container0'>
-<div id='item0'><canvas id="canvas0"></canvas></div>
+<div id='container0'><div id='container1'>
+<div id='item0'><canvas id="canvas0"></canvas></div><div id='moves' ></div></div>
 <div id='item7'><canvas id="canvas7" style='display:none;'></canvas></div>
 
 
@@ -70,3 +35,38 @@
 
 
 
+<div id='controls' style='display:none;'>
+<div class='btn'><canvas id='max'></canvas></div>
+<div class='btn'><canvas id='min'></canvas></div>
+<div class='btn'><canvas id='save'></canvas></div>
+<div class='btn'><canvas id='more'></canvas></div>
+<div class='btn'><canvas id='less'></canvas></div>
+<div class='btn'><canvas id='left'></canvas></div>
+<div class='btn'><canvas id='start'></canvas></div>
+<div class='btn'><canvas id='up'></canvas></div>
+<div class='btn'><canvas id='down'></canvas></div>
+<div class='btn'><canvas id='right'></canvas></div>
+
+
+<div class='btn' hidden><canvas id='remove'></canvas></div>
+
+<!----
+<div class='btn'><canvas id='p1'></canvas></div>
+<div class='btn'><canvas id='p2'></canvas></div>
+<div class='btn'><canvas id='p3'></canvas></div>
+---->
+</div>
+
+<div style='display:none'>
+<input type="radio" class="qwe" name="mode" id="take" value="take"> Take 
+<input type="radio"  class="qwe"  name="mode" id="snake" value="snake" checked> Take Off  
+<input type="radio"  class="qwe"  name="mode" id="join" value="join" > Fill 
+<input type="radio"  class="qwe"  name="mode" id="split" value="split" > Return 
+</div>
+
+<div style='display:none'>Cell size: <select id="cell_size" hidden><option value="1" selected >1</option><option value="2" >2</option><option value="3" >3</option><option value="4" >4</option><option value="5" >5</option><option value="8" >8</option><option value="16" >16</option><option value="24">24</option></select>
+<input type="button" value="set" onclick="update()">
+<input type="checkbox" id='save_on' checked>
+<!--<input type="button" value="save" onclick="save()">-->
+
+</div>
